[package]
name = "starfield"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"] }
pinyin = "0.10"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
assert_fs = "1.1.1"
